obj/rp.h


#define RP_OK     0
typedef enum {
    RP_SMP_125M     = 1,       
    RP_SMP_62_500M  = 2,       
    RP_SMP_31_250M  = 4,       
    RP_SMP_15_625M  = 8,       
    RP_SMP_7_812M   = 16,      
    RP_SMP_3_906M   = 32,      
    RP_SMP_1_953M   = 64,      
    RP_SMP_976_562K = 128,     
    RP_SMP_448_281K = 256,     
    RP_SMP_244_140K = 512,     
    RP_SMP_122_070K = 1024,    
    RP_SMP_61_035K  = 2048,    
    RP_SMP_30_517K  = 4096,    
    RP_SMP_15_258K  = 8192,    
    RP_SMP_7_629K   = 16384,   
    RP_SMP_3_814K   = 32768,   
    RP_SMP_1_907K   = 65536    
} rp_acq_sampling_rate_t;
typedef enum {
    RP_DEC_1     = 1,       
    RP_DEC_2     = 2,       
    RP_DEC_4     = 4,       
    RP_DEC_8     = 8,       
    RP_DEC_16    = 16,      
    RP_DEC_32    = 32,      
    RP_DEC_64    = 64,      
    RP_DEC_128   = 128,     
    RP_DEC_256   = 256,     
    RP_DEC_512   = 512,     
    RP_DEC_1024  = 1024,    
    RP_DEC_2048  = 2048,    
    RP_DEC_4096  = 4096,    
    RP_DEC_8192  = 8192,    
    RP_DEC_16384 = 16384,   
    RP_DEC_32768 = 32768,   
    RP_DEC_65536 = 65536    
} rp_acq_decimation_t;
typedef enum {
    RP_TRIG_SRC_DISABLED, 
    RP_TRIG_SRC_NOW,      
    RP_TRIG_SRC_CHA_PE,   
    RP_TRIG_SRC_CHA_NE,   
    RP_TRIG_SRC_CHB_PE,   
    RP_TRIG_SRC_CHB_NE,   
    RP_TRIG_SRC_EXT_PE,   
    RP_TRIG_SRC_EXT_NE,   
    RP_TRIG_SRC_AWG_PE,   
    RP_TRIG_SRC_AWG_NE    
} rp_acq_trig_src_t;
typedef enum {
    RP_TRIG_STATE_TRIGGERED, 
    RP_TRIG_STATE_WAITING,   
} rp_acq_trig_state_t;
int rp_AIpinGetValueRaw(int unsigned pin, uint32_t* value);
int rp_AOpinReset();
int rp_AOpinGetValue(int unsigned pin, float* value);
int rp_AOpinGetValueRaw(int unsigned pin, uint32_t* value);
int rp_AOpinSetValue(int unsigned pin, float value);
int rp_AOpinSetValueRaw(int unsigned pin, uint32_t value);
int rp_AOpinGetRange(int unsigned pin, float* min_val,  float* max_val);
int rp_AcqSetArmKeep(bool enable);
int rp_AcqGetArmKeep(bool* state);
int rp_AcqGetBufferFillState(bool* state);
int rp_AcqSetDecimation(rp_acq_decimation_t decimation);
int rp_AcqGetDecimation(rp_acq_decimation_t* decimation);
int rp_AcqConvertFactorToDecimation(uint32_t factor,rp_acq_decimation_t* decimation);
int rp_AcqSetDecimationFactor(uint32_t decimation);
int rp_AcqGetDecimationFactor(uint32_t* decimation);
int rp_AcqSetSamplingRate(rp_acq_sampling_rate_t sampling_rate);
int rp_AcqGetSamplingRate(rp_acq_sampling_rate_t* sampling_rate);
int rp_AcqGetSamplingRateHz(float* sampling_rate);
int rp_AcqSetAveraging(bool enabled);
int rp_AcqGetAveraging(bool *enabled);
int rp_AcqSetTriggerSrc(rp_acq_trig_src_t source);
int rp_AcqGetTriggerSrc(rp_acq_trig_src_t* source);
int rp_AcqGetTriggerState(rp_acq_trig_state_t* state);
int rp_AcqSetTriggerDelay(int32_t decimated_data_num);
int rp_AcqGetTriggerDelay(int32_t* decimated_data_num);
int rp_AcqSetTriggerDelayNs(int64_t time_ns);