librp-sys/src/bindings.rs

extern "C" {
    #[doc = " Gets raw value from analog pin.\n @param pin    pin index\n @param value  raw 12 bit XADC value\n @return       RP_OK - successful, RP_E* - failure"]
    pub fn rp_AIpinGetValueRaw(
        pin: ::std::os::raw::c_uint,
        value: *mut u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets analog outputs to default values (0V)."]
    pub fn rp_AOpinReset() -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets value from analog pin in volts.\n @param pin    Analog output pin index.\n @param value  Value on analog pin in volts\n @return       RP_OK - successful, RP_E* - failure"]
    pub fn rp_AOpinGetValue(pin: ::std::os::raw::c_uint, value: *mut f32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets raw value from analog pin.\n @param pin    Analog output pin index.\n @param value  Raw value on analog pin\n @return       RP_OK - successful, RP_E* - failure"]
    pub fn rp_AOpinGetValueRaw(
        pin: ::std::os::raw::c_uint,
        value: *mut u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets value in volts on analog output pin.\n @param pin    Analog output pin index.\n @param value  Value in volts to be set on given output pin.\n @return       RP_OK - successful, RP_E* - failure"]
    pub fn rp_AOpinSetValue(pin: ::std::os::raw::c_uint, value: f32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets raw value on analog output pin.\n @param pin    Analog output pin index.\n @param value  Raw value to be set on given output pin.\n @return       RP_OK - successful, RP_E* - failure"]
    pub fn rp_AOpinSetValueRaw(pin: ::std::os::raw::c_uint, value: u32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets range in volts on specific pin.\n @param pin      Analog input output pin index.\n @param min_val  Minimum value in volts on given pin.\n @param max_val  Maximum value in volts on given pin.\n @return       RP_OK - successful, RP_E* - failure"]
    pub fn rp_AOpinGetRange(
        pin: ::std::os::raw::c_uint,
        min_val: *mut f32,
        max_val: *mut f32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Enables continous acquirement even after trigger has happened.\n @param enable True for enabling and false disabling\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqSetArmKeep(enable: bool) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets status of continous acquirement even after trigger has happened.\n @param state Returns status\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqGetArmKeep(state: *mut bool) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Indicates whether the ADC buffer was full of data. The length of the buffer\n is determined by the delay. By default, the delay is half the buffer.\n @param state Returns status\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqGetBufferFillState(state: *mut bool) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets the decimation used at acquiring signal. There is only a set of\n pre-defined decimation values which can be specified. See the\n #rp_acq_decimation_t enum values.\n @param decimation Specify one of pre-defined decimation values\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqSetDecimation(decimation: rp_acq_decimation_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets the decimation used at acquiring signal. There is only a set of\n pre-defined decimation values which can be specified. See the\n #rp_acq_decimation_t enum values.\n @param decimation Returns one of pre-defined decimation values which is\n currently set.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqGetDecimation(decimation: *mut rp_acq_decimation_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Convert factor to decimation used at acquiring signal. There is only a get of\n pre-defined decimation values which can be specified. See the\n #rp_acq_decimation_t enum values.\n @param factor Decimation factor.\n @param decimation Returns one of pre-defined decimation values which is\n currently set.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqConvertFactorToDecimation(
        factor: u32,
        decimation: *mut rp_acq_decimation_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets the decimation used at acquiring signal.\n You can specify values in the range (1,2,4,8,16-65536)\n @param decimation Decimation values\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqSetDecimationFactor(decimation: u32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets the decimation factor used at acquiring signal in a numerical form.\n Although this method returns an integer value representing the current factor\n of the decimation, there is only a set of pre-defined decimation factor\n values which can be returned. See the #rp_acq_decimation_t enum values.\n @param decimation Returns decimation factor value which is currently set.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqGetDecimationFactor(decimation: *mut u32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets the sampling rate for acquiring signal. There is only a set of\n pre-defined sampling rate values which can be specified. See the\n #rp_acq_sampling_rate_t enum values.\n @param sampling_rate Specify one of pre-defined sampling rate value\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqSetSamplingRate(sampling_rate: rp_acq_sampling_rate_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets the sampling rate for acquiring signal. There is only a set of\n pre-defined sampling rate values which can be returned. See the\n #rp_acq_sampling_rate_t enum values.\n @param sampling_rate Returns one of pre-defined sampling rate value which is\n currently set\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqGetSamplingRate(
        sampling_rate: *mut rp_acq_sampling_rate_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets the sampling rate for acquiring signal in a numerical form in Hz.\n Although this method returns a float value representing the current value of\n the sampling rate, there is only a set of pre-defined sampling rate values\n which can be returned. See the #rp_acq_sampling_rate_t enum values.\n @param sampling_rate returns currently set sampling rate in Hz\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqGetSamplingRateHz(sampling_rate: *mut f32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Enables or disables averaging of data between samples.\n Data between samples can be averaged by setting the averaging flag in the\n Data decimation register.\n @param enabled When true, the averaging is enabled, otherwise it is disabled.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqSetAveraging(enabled: bool) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Returns information if averaging of data between samples is enabled or\n disabled. Data between samples can be averaged by setting the averaging flag\n in the Data decimation register.\n @param enabled Set to true when the averaging is enabled, otherwise is it set\n to false.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqGetAveraging(enabled: *mut bool) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets the trigger source used at acquiring signal. When acquiring is started,\n the FPGA waits for the trigger condition on the specified source and when the\n condition is met, it starts writing the signal to the buffer.\n @param source Trigger source.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqSetTriggerSrc(source: rp_acq_trig_src_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets the trigger source used at acquiring signal. When acquiring is started,\n the FPGA waits for the trigger condition on the specified source and when the\n condition is met, it starts writing the signal to the buffer.\n @param source Currently set trigger source.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqGetTriggerSrc(source: *mut rp_acq_trig_src_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Returns the trigger state. Either it is waiting for a trigger to happen, or\n it has already been triggered. By default it is in the triggered state, which\n is treated the same as disabled.\n @param state Trigger state\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqGetTriggerState(state: *mut rp_acq_trig_state_t) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets the number of decimated data after trigger written into memory.\n @param decimated_data_num Number of decimated data. It must not be higher\n than the ADC buffer size.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqSetTriggerDelay(decimated_data_num: i32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Returns current number of decimated data after trigger written into memory.\n @param decimated_data_num Number of decimated data.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqGetTriggerDelay(decimated_data_num: *mut i32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Sets the amount of decimated data in nanoseconds after trigger written into\n memory.\n @param time_ns Time in nanoseconds. Number of ADC samples within the\n specified time must not be higher than the ADC buffer size.\n @return If the function is successful, the return value is RP_OK.\n If the function is unsuccessful, the return value is any of RP_E* values that\n indicate an error."]
    pub fn rp_AcqSetTriggerDelayNs(time_ns: i64) -> ::std::os::raw::c_int;
}
